Installed magic ui, shadcn ui and basic setup for hero section

--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
   "dependencies": {
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.10",
     "geist": "^1.3.0",
+    "lucide-react": "^0.395.0",
     "next": "^14.2.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.3"
   },
   "devDependencies": {
@@ -36,7 +42,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^5.14.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.4.2"
   },
   "ct3aMetadata": {
